data-cloud-error-handling/force-app/main/default/objects/DeploymentStatusCallback__e/DeploymentStatusCallback__e.object-meta.xml
<CustomObject>
    <label>Deployment Status Callback</label>
    <pluralLabel>Deployment Status Callback</pluralLabel>
</CustomObject>