data-cloud-error-handling/force-app/main/default/objects/DeploymentStatusCallback__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>