data-cloud-error-handling/force-app/main/default/objects/DeploymentStatusCallback__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>